# regain_CLI

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  install_r_dependencies.R  pyproject.toml
demo_dataset/: README.md
recipes/regain/: meta.yaml
src/regain/: .RData  AMR.py  MVA.r  __init__.py  bayesCPQuery.r  bayesQueryGrain.r  bayesnetwork.r  cli.py  collapse_features.py  combine.py  curate.py  extract.py  genome_similarity.py  matrix.py  matrix_summary.py  mva.sh  network_analysis.py  regain  requirements.txt
