[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regain-cli"
version = "1.7.1" 
description = "ReGAIN: Resistance Gene Association and Inference Network CLI"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "ERBringHorvath" }]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.3",        
  "biopython>=1.83",    
  "tqdm>=4.64"
]

[project.urls]
Homepage = "https://github.com/youruser/regain_CLI"
Issues = "https://github.com/youruser/regain_CLI/issues"

[project.scripts]
regain = "regain.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# ship R scripts, shell wrappers, and demo data inside the package
[tool.setuptools.package-data]
regain = ["*.r", "*.sh", "demo_datasets/*"]
