[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regain-cli"
version = "1.8.0"
description = "ReGAIN: Resistance Gene Association and Inference Network CLI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ERBringHorvath" }]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.3",
  "biopython>=1.83",
  "tqdm>=4.67"
]

[project.urls]
Homepage = "https://github.com/ERBringHorvath/regain_CLI"
Issues = "https://github.com/ERBringHorvath/regain_CLI/issues"

[project.scripts]
regain = "regain.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
regain = [
  "*.r",
  "*.R",
  "*.sh",
  "demo_datasets/*",
  "demo_datasets/**/*"
]